--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/x-data-grid-generator": "^6.19.10",
+    "@mui/x-data-grid-pro": "^6.19.10",
     "@prisma/client": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
