--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "zod": "^3.22.4"
   },
