--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/x-data-grid-pro": "^6.19.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
